[tool.poetry]
name = "cmr_association_diff"
version = "0.1.0"
description = ""
authors = ["Simon Liu <simon.liu@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
python-cmr = { git = "https://github.com/nasa/python_cmr.git", branch = "develop" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mock = "^4.0.3"
pylint = "^2.11.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cmr_association_diff = "cmr_association_diff.cmr_association_diff:run"
